Added documentation for follow ups
